# mydo

./: .gitignore  Cargo.toml  LICENSE.md  README.md  config.json  do.json  mydo.json
src/: cmd.rs  main.rs  util.rs
src.bak/: main.rs
src/cmd/: auto.rs  build.rs  init.rs  man.rs  mod.rs  run.rs
src/util/: config.rs  home.rs  mod.rs  shebang.rs
