[package]
name = "mydo"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.46"
execute = "0.2.13"
serde_json = "1.0.114"
tar = "0.4.40"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
